--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>視差滾動旅遊主題頁面</title>
+        <title>Parallax responsive landing page</title>
 
         <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -22,10 +22,10 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#" class="nav__link">首頁</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">探索</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">冒險</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">發現</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Explore</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Aventure</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Discover</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,7 +40,7 @@
                 <div class="parallax home__parallax home__parallax-img4" data-rellax-speed="-3"></div>
 
                 <h1 class="parallax home__title" data-rellax-speed="-6">KKday</h1>
-                <span class="parallax home__subtitle" data-rellax-speed="-5">山岳探索</span>
+                <span class="parallax home__subtitle" data-rellax-speed="-5">Mountain explore</span> 
 
                 <div class="home__scroll">
                    <a href="#section"><i class='bx bx-mouse'></i></a>
@@ -51,11 +51,11 @@
             <section class="l-section" id="section">
                 <div class="section">
                     <div class="section__data">
-                        <h2 class="section__title">攀登高山</h2>
-                        <p class="section__text">踏上山巔，感受雲霧繚繞與冰川共舞的壯闊景致。從蜿蜒小徑到峭壁攀升，每一步都讓人更貼近大地的脈動，發現隱藏於山林間的靜謐與驚喜。</p>
+                        <h2 class="section__title">Scaling mountains</h2>
+                        <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, laboriosam. Esse ipsum culpa laboriosam, totam hic quidem recusandae eos, numquam iusto aliquid expedita est sapiente quaerat inventore voluptatem corporis aliquam.</p>
                     </div>
         
-                    <img src="assets/img/imgm.jpg" alt="雪山景色" class="section__img">
+                    <img src="assets/img/imgm.jpg" alt="" class="section__img">
                 </div>
             </section>
         </main>
