--- a/index.html
+++ b/index.html
@@ -80,12 +80,22 @@
                     </label>
 
                     <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">Email</span>
+                        <input type="email" name="email" placeholder="請輸入電子郵件" required>
+                    </label>
+
+                    <label class="rsvp-form__field">
                         <span class="rsvp-form__label">是否參加</span>
                         <select name="attendance" required>
                             <option value="">請選擇</option>
                             <option value="yes">會參加</option>
                             <option value="no">不克參加</option>
                         </select>
+                    </label>
+
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">參與人數</span>
+                        <input type="number" name="guests" min="1" placeholder="請輸入同行人數" required>
                     </label>
 
                     <button type="submit" class="button">送出回覆</button>
