Create bilingual wedding invitation layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>視差滾動旅遊主題頁面</title>
+        <title>2026 婚禮邀請｜Austin & Joanne</title>
 
         <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -14,7 +14,7 @@
         <!-- ===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
-                <a href="#" class="nav__logo">KKday</a>
+                <a href="#home" class="nav__logo">Austin &amp; Joanne</a>
 
                 <div class="nav__toggle" id="nav-toggle">
                     <i class='bx bx-menu-alt-right'></i>
@@ -22,43 +22,126 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#" class="nav__link">首頁</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">探索</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">冒險</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">發現</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link">首頁</a></li>
+                        <li class="nav__item"><a href="#story" class="nav__link">邀請</a></li>
+                        <li class="nav__item"><a href="#details" class="nav__link">婚禮資訊</a></li>
+                        <li class="nav__item"><a href="#rsvp" class="nav__link">回覆</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
 
-        <main>
-            <!-- ===== HOME =====-->
-            <div class="home">
-                <div class="parallax home__parallax home__parallax-img1" data-rellax-speed="-9"></div>
-                <div class="parallax home__parallax home__parallax-img2" data-rellax-speed="-7"></div>
+    <main>
+        <!-- ===== HOME =====-->
+        <div class="home" id="home">
+            <div class="parallax home__parallax home__parallax-img1" data-rellax-speed="-9"></div>
+            <div class="parallax home__parallax home__parallax-img2" data-rellax-speed="-7"></div>
                 <div class="parallax home__parallax home__parallax-img3" data-rellax-speed="-6"></div>
                 <div class="parallax home__parallax home__parallax-img4" data-rellax-speed="-3"></div>
 
-                <h1 class="parallax home__title" data-rellax-speed="-6">KKday</h1>
-                <span class="parallax home__subtitle" data-rellax-speed="-5">山岳探索</span>
+                <h1 class="parallax home__title" data-rellax-speed="-6">Austin &amp; Joanne</h1>
+                <span class="parallax home__subtitle" data-rellax-speed="-5">婚禮邀請 · 2026 / 04 / 25</span>
 
                 <div class="home__scroll">
-                   <a href="#section"><i class='bx bx-mouse'></i></a>
+                   <a href="#story"><i class='bx bx-mouse'></i></a>
                 </div>
             </div>
 
-            <!-- ===== SECTION =====-->
-            <section class="l-section" id="section">
-                <div class="section">
-                    <div class="section__data">
-                        <h2 class="section__title">攀登高山</h2>
-                        <p class="section__text">踏上山巔，感受雲霧繚繞與冰川共舞的壯闊景致。從蜿蜒小徑到峭壁攀升，每一步都讓人更貼近大地的脈動，發現隱藏於山林間的靜謐與驚喜。</p>
-                    </div>
-        
-                    <img src="assets/img/imgm.jpg" alt="雪山景色" class="section__img">
+        <!-- ===== INVITE SECTION =====-->
+        <section class="l-section" id="story">
+            <div class="section">
+                <div class="section__data">
+                    <h2 class="section__title">我們的婚禮邀約</h2>
+                    <p class="section__text">親愛的家人與朋友，感謝你們一路上的陪伴與祝福。我們將於 2026 年 4 月 25 日在日日旅海民宿迎接彼此的承諾，誠摯邀請您與我們一同分享這份喜悅。</p>
+                    <p class="section__text section__text--secondary">Dear family and friends, your love and support mean the world to us. We would be honored to celebrate our wedding with you on April 25, 2026 at Ri Ri Hai Seaside Villa. Your presence will make the day complete.</p>
                 </div>
-            </section>
-        </main>
+
+                <img src="assets/img/imgm.jpg" alt="山海風景" class="section__img">
+            </div>
+        </section>
+
+        <!-- ===== DETAILS SECTION =====-->
+        <section class="l-section" id="details">
+            <div class="section section--details">
+                <div class="section__data">
+                    <h2 class="section__title">婚禮資訊</h2>
+                    <p class="section__text">日落與海風作伴，期待與你相聚。下列資訊提供給您方便安排行程，若有任何需求也歡迎於回覆表單中留言。</p>
+                    <p class="section__text section__text--secondary">Sunset, sea breeze, and your company will make our day perfect. Here are the key details to help you plan your visit—feel free to leave us a note in the RSVP form.</p>
+                </div>
+
+                <div class="details-grid">
+                    <div class="detail-card">
+                        <h3 class="detail-card__title">日期 Date</h3>
+                        <p class="detail-card__text">2026 / 04 / 25（週六）
+                            <br>迎賓 15:30 · 儀式 16:30 · 晚宴 18:00</p>
+                    </div>
+                    <div class="detail-card">
+                        <h3 class="detail-card__title">地點 Venue</h3>
+                        <p class="detail-card__text">日日旅海民宿 | 花蓮縣壽豐鄉鹽寮村138號
+                            <br>Ri Ri Hai Seaside Villa, Hualien</p>
+                    </div>
+                    <div class="detail-card">
+                        <h3 class="detail-card__title">著裝 Dress Code</h3>
+                        <p class="detail-card__text">海岸森林系輕禮服，舒適優雅即可。
+                            <br>Coastal chic in light, breathable outfits.</p>
+                    </div>
+                    <div class="detail-card">
+                        <h3 class="detail-card__title">旅宿建議 Stay</h3>
+                        <p class="detail-card__text">歡迎於壽豐、鹽寮沿海選擇喜愛的民宿，若需要協助代訂請在表單註明。</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ===== RSVP FORM =====-->
+        <section class="l-section" id="rsvp">
+            <div class="section section--form">
+                <div class="section__data">
+                    <h2 class="section__title">出席回覆 RSVP</h2>
+                    <p class="section__text">請留下聯絡方式與出席人數，若有素食、過敏或交通需求，也歡迎留言讓我們為您準備。</p>
+                    <p class="section__text section__text--secondary">Kindly share your contact details and number of guests. Let us know about vegetarian options, allergies, or travel needs so we can take care of you.</p>
+                </div>
+
+                <form class="rsvp-form">
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">姓名</span>
+                        <input type="text" name="name" placeholder="請輸入姓名" required>
+                    </label>
+
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">電話</span>
+                        <input type="tel" name="phone" placeholder="請輸入電話" required>
+                    </label>
+
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">Email</span>
+                        <input type="email" name="email" placeholder="請輸入電子郵件" required>
+                    </label>
+
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">是否參加</span>
+                        <select name="attendance" required>
+                            <option value="">請選擇</option>
+                            <option value="yes">會參加</option>
+                            <option value="no">不克參加</option>
+                        </select>
+                    </label>
+
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">參與人數</span>
+                        <input type="number" name="guests" min="1" placeholder="請輸入同行人數" required>
+                    </label>
+
+                    <label class="rsvp-form__field">
+                        <span class="rsvp-form__label">留言備註</span>
+                        <textarea name="note" rows="3" placeholder="飲食、住宿或交通需求，歡迎告訴我們"></textarea>
+                    </label>
+
+                    <button type="submit" class="button">送出回覆</button>
+                </form>
+            </div>
+        </section>
+    </main>
 
         <!-- RELLAX JS -->
         <script src="assets/js/rellax.min.js"></script>
@@ -75,4 +158,3 @@
     </body>
 
 </html>
-
