Add hero venue tagline and relative image paths

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
                 <h1 class="parallax home__title" data-rellax-speed="-6">Austin &amp; Joanne</h1>
                 <span class="parallax home__subtitle" data-rellax-speed="-5">婚禮邀請 · 2026 / 04 / 25</span>
+                <span class="parallax home__tagline" data-rellax-speed="-4">日日旅海民宿 · Ri Ri Hai Seaside Villa</span>
 
                 <div class="home__scroll">
                    <a href="#story"><i class='bx bx-mouse'></i></a>
